// Vitest Snapshot v1

exports[`BackTop > BackTop baseVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-back-top t-is-fixed t-back-top--round"
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`BackTop > BackTop mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-806aae90=""
>
  <h1
    class="title"
    data-v-806aae90=""
  >
    BackTop 回到顶部
  </h1>
  <p
    class="summary"
    data-v-806aae90=""
  >
    用于当页面过长往下滑动时，帮助用户快速回到页面顶部
  </p>
  <div
    class="t-back-top t-is-fixed t-back-top--round"
    data-v-806aae90=""
    style="display: none;"
  >
    <svg
      class="t-icon t-icon-backtop"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-back-top__text"
    >
      顶部
    </span>
  </div>
  <div
    class="t-back-top t-is-fixed t-back-top--round"
    data-v-806aae90=""
    style="display: none;"
  >
    
    <div
      data-v-806aae90=""
    />
    
    <span
      class="t-back-top__text"
    >
      顶部
    </span>
  </div>
  <div
    class="t-back-top t-is-fixed t-back-top--round"
    data-v-806aae90=""
    style="display: none;"
  >
    <svg
      class="t-icon t-icon-backtop"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-back-top__text"
    >
      顶部
    </span>
  </div>
  <div
    class="t-back-top t-is-fixed t-back-top--round"
    data-v-806aae90=""
    style="display: none;"
  >
    <svg
      class="t-icon t-icon-backtop"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-back-top__text"
    >
      target
    </span>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-806aae90=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      通过设置theme属性，可以分别展示圆+白、半圆+白、圆+黑、半圆+黑四种样式类型
    </p>
    
    <div
      class="button-group"
      data-v-806aae90=""
    >
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-index="0"
        data-v-806aae90=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          圆角白底
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-index="1"
        data-v-806aae90=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          圆角黑底
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-index="2"
        data-v-806aae90=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          半圆白底
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-index="3"
        data-v-806aae90=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          半圆黑底
          
        </span>
      </button>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-806aae90=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 内容
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      通过设置text、icon属性，可以控制悬浮按钮的展示内容
    </p>
    
    <div
      class="button-group"
      data-v-806aae90=""
    >
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-index="4"
        data-v-806aae90=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          纯图标
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-806aae90=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          纯文字
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-806aae90=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          自定义图标
          
        </span>
      </button>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-806aae90=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 返回
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      通过设置target属性，可以控制页面滚动到对应的DOM元素
    </p>
    
    <div
      class="button-group"
      data-v-806aae90=""
    >
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-806aae90=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          回到此按钮
          
        </span>
      </button>
    </div>
    
  </div>
  <div
    class="blank"
    data-v-806aae90=""
  />
</div>
`;

exports[`BackTop > BackTop targetVue demo works fine 1`] = `
<div>
  <span />
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-back-top t-is-fixed t-back-top--round"
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`BackTop > BackTop themeVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-back-top t-is-fixed t-back-top--half-round-dark"
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
    </div>
    <div
      class="t-back-top t-is-fixed t-back-top--round"
      style="display: none;"
    >
      
      <div>
        图标
      </div>
      
      <span
        class="t-back-top__text"
      >
        顶部
      </span>
    </div>
  </div>
</div>
`;
